deployment/k8s/training-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: training
  name: training
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: training
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/deployment-mlnet: "true"
        io.kompose.service: training
    spec:
      # restartPolicy: Never
      containers:
        - env:
            - name: ARTIFACT_ROOT
              value: deployment/savedmodel
            - name: BACKEND_URI
              value: sqlite:////mlflow/db/mlruns.db
            - name: REGISTERED_STORE_URI
              value: sqlite:///mlflow/db/registered_model.db
            - name: MLFLOW_TRACKING_URI
              value: 10.244.0.82:5000
          image: u2nettraining:latest
          imagePullPolicy: Never
          name: training
          resources: {}
          volumeMounts:
            - mountPath: ../../mlflow/savedmodel
              name: training-claim0
            - mountPath: ../../db/mlruns.db
              name: training-claim1
            - mountPath: ../../db/registered_model.db
              name: training-claim2
      volumes:
        - name: training-claim0
          persistentVolumeClaim:
            claimName: training-claim0
        - name: training-claim1
          persistentVolumeClaim:
            claimName: training-claim1
        - name: training-claim2
          persistentVolumeClaim:
            claimName: training-claim2
status: {}
