deployment/k8s/mlflow-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: mlflow
    io.kompose.network/deployment-mlnet: "true"
  name: mlflow
spec:
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
  selector:
    io.kompose.service: mlflow
status:
  loadBalancer: {}
