deployment/k8s/training-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: training
  name: training
spec:
  ports:
    - name: "5004"
      port: 5004
      targetPort: 5004
  selector:
    io.kompose.service: training
status:
  loadBalancer: {}
