deployment/k8s/deployment-mlnet-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: deployment-mlnet
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/deployment-mlnet: "true"
  podSelector:
    matchLabels:
      io.kompose.network/deployment-mlnet: "true"
